--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,73 +1,60 @@
 ---
-format_version: 1.0.0
+format_version: '11'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
-
-app:
-  envs:
-  - BITRISE_PROJECT_PATH: "./ios-simple-objc/ios-simple-objc.xcodeproj"
-    opts:
-      is_expand: false
-  - BITRISE_SCHEME: ios-simple-objc
-    opts:
-      is_expand: false
-
+project_type: ios
 trigger_map:
-- pattern: "*"
-  is_pull_request_allowed: true
+- push_branch: "*"
   workflow: primary
-
+- pull_request_source_branch: "*"
+  workflow: primary
 workflows:
+  deploy:
+    steps:
+    - activate-ssh-key@4:
+        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+    - git-clone@6: {}
+    - cache-pull@2: {}
+    - script@1:
+        title: Do anything with Script step
+    - certificate-and-profile-installer@1: {}
+    - xcode-test@3:
+        inputs:
+        - project_path: "$BITRISE_PROJECT_PATH"
+        - scheme: "$BITRISE_SCHEME"
+    - xcode-archive@3:
+        inputs:
+        - project_path: "$BITRISE_PROJECT_PATH"
+        - scheme: "$BITRISE_SCHEME"
+        - export_method: "$BITRISE_EXPORT_METHOD"
+    - deploy-to-bitrise-io@1: {}
+    - cache-push@2: {}
   primary:
     steps:
-    - git-clone@3.0.0:
-        run_if: ".IsCI"
-        outputs:
-        - GIT_CLONE_COMMIT_HASH:
-          opts:
-            title: Cloned git commit's commit hash
-        - GIT_CLONE_COMMIT_MESSAGE_SUBJECT:
-          opts:
-            title: Cloned git commit's message subject
-        - GIT_CLONE_COMMIT_MESSAGE_BODY:
-          opts:
-            title: Cloned git commit's message body
-        - GIT_CLONE_COMMIT_AUTHOR_NAME:
-          opts:
-            title: Cloned git commit's author name
-        - GIT_CLONE_COMMIT_AUTHOR_EMAIL:
-          opts:
-            title: Cloned git commit's author email address
-        - GIT_CLONE_COMMIT_COMMITER_NAME:
-          opts:
-            title: Cloned git commit's committer name
-        - GIT_CLONE_COMMIT_COMMITER_EMAIL:
-          opts:
-            title: Cloned git commit's committer email
-    - cocoapods-install@1.0.2: {}
-    - certificate-and-profile-installer@1.2.0:
-        run_if: ".IsCI"
-    - select-xcode-version@2.0.0:
-        run_if: ".IsCI"
+    - activate-ssh-key@4:
+        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+    - git-clone@6: {}
+    - cache-pull@2: {}
+    - script@1:
+        title: Do anything with Script step
         inputs:
-        - version_channel_id: "-stable"
-    - xcode-test@1.3.0:
-        title: 'Xcode: Unit Test'
+          content: echo "version = ${VERSION}!"
+    - certificate-and-profile-installer@1: {}
+    - xcode-test@3:
         inputs:
-        - opts:
-            is_expand: false
-          simulator_device: iPad
-    - xcode-archive@1.2.0:
-        title: 'Xcode: Create Archive'
-        inputs:
-        - output_dir: "${BITRISE_DEPLOY_DIR}"
-        outputs:
-        - BITRISE_IPA_PATH:
-          opts:
-            title: The created .ipa file's path
-        - BITRISE_DSYM_PATH:
-          opts:
-            title: The created .dSYM.zip file's path
-    - script@1.1.6:
-        title: 'Run some scripty stuff'
-        inputs:
-        - content: echo "version = ${VERSION}!"
+        - project_path: "$BITRISE_PROJECT_PATH"
+        - scheme: "$BITRISE_SCHEME"
+    - deploy-to-bitrise-io@1: {}
+    - cache-push@2: {}
+app:
+  envs:
+  - opts:
+      is_expand: false
+    BITRISE_PROJECT_PATH: ios-simple-objc/ios-simple-objc.xcodeproj
+  - opts:
+      is_expand: false
+    BITRISE_SCHEME: ios-simple-objc
+  - opts:
+      is_expand: false
+    BITRISE_EXPORT_METHOD: development
+  - VERSION: $APP_VERSION
+
