--- a/bitrise.yml
+++ b/bitrise.yml
@@ -34,10 +34,10 @@ workflows:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
     - git-clone@6: {}
     - cache-pull@2: {}
-    - script@1:
+    - script@1.1.6:
         title: Do anything with Script step
         inputs:
-          content: echo "version = ${VERSION}!"
+        - content: echo "version = ${VERSION}!"
     - certificate-and-profile-installer@1: {}
     - xcode-test@3:
         inputs:
