--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2,11 +2,11 @@
 format_version: '11'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: ios
-trigger_map:
-- push_branch: "*"
-  workflow: primary
-- pull_request_source_branch: "*"
-  workflow: primary
+#trigger_map:
+#- push_branch: "*"
+#  workflow: primary
+#- pull_request_source_branch: "*"
+#  workflow: primary
 workflows:
   deploy:
     steps:
