--- a/bitrise.yml
+++ b/bitrise.yml
@@ -33,7 +33,7 @@ workflows:
     - script: 
         title: setup
         inputs:
-        - contents: |-
+        - content: |-
             RELEASE_NAME="$(echo $NEXT_PRODUCTION_VERSION | tr '.' '-')"
             BRANCH_NAME="rel-$(echo $RELEASE_NAME)"
             GRAPHQL_URL="https://api-production-mobile-${RELEASE_NAME}.rxvantage.com"
